--- a/Elementary/Info.plist
+++ b/Elementary/Info.plist
@@ -12,6 +12,7 @@
 	<array>
 		<string>RobotoCondensed-Regular.ttf</string>
 		<string>RobotoCondensed-Bold.ttf</string>
+		<string>Font Awesome 5 Free-Solid-900.otf</string>
 		<string>Font Awesome 5 Pro-Solid-900.otf</string>
 	</array>
 	<key>UIApplicationSceneManifest</key>
