--- a/Elementary/Info.plist
+++ b/Elementary/Info.plist
@@ -13,6 +13,8 @@
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
 		<false/>
+		<key>UISceneConfigurations</key>
+		<dict/>
 	</dict>
 	<key>UIFileSharingEnabled</key>
 	<true/>
